--- a/index.html
+++ b/index.html
@@ -95,18 +95,12 @@
                                                 <p class="fragment">\[\sigma(E,\vec{r},\hat{\Omega},T,t,x,i)\]<p>
                                         </section>
 					<section>
-                                                <a href="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
-                                                  class="image"><img 
-                                                  src="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
-                                                  alt="Resonances"></a>
-                                        </section>
-					<section>
                                                 <a href="http://rationalwiki.org/w/images/thumb/1/1f/Chainreaction.svg/715px-Chainreaction.svg.png"
                                                   class="image"><img 
                                                   src="http://rationalwiki.org/w/images/thumb/1/1f/Chainreaction.svg/715px-Chainreaction.svg.png"
                                                   alt="Chain reaction"></a>
                                         </section>
-					<section>
+					<!--<section>
                                                 <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/6/68/ThermalFissionYield.svg/800px-ThermalFissionYield.svg.png"
                                                   class="image"><img 
                                                   src="
@@ -114,12 +108,19 @@
                                                   "
                                                   alt="Fission yield"height=400></a>
                                         </section>
+                                        -->
 					<section>
                                                 <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Isotopes_and_half-life.svg/853px-Isotopes_and_half-life.svg.png"
                                                   class="image"><img 
                                                   height="600"
                                                   src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Isotopes_and_half-life.svg/853px-Isotopes_and_half-life.svg.png"
                                                   alt="Nucleus Stability"></a>
+                                        </section>
+					<section>
+                                                <a href="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
+                                                  class="image"><img 
+                                                  src="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
+                                                  alt="Resonances"></a>
                                         </section>
 					<section>
                                                 <h2>Evaluated Nuclear Data Sets</h2>
