--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
                 <meta name="description" content="
                 A description of the use and generation of data within nuclear 
-                engineering. This was presented at a BIDS meeting in Berkeley, 
-                CA on August 28, 2014.">
+                engineering. This was presented as an invited guest lecture in 
+                INFO500 at UIUC in Urbana, IL on October 13, 2016.">
 		<meta name="author" content="Kathryn Huff">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -52,37 +52,73 @@
 				</section>
 				<section>
                                         <section>
-                                                <span class="fragment">
+                                                <span>
+                                                <span class="fragment fade-out">
                                                 <a
-                                                  href="http://software-carpentry.org"
+                                                  href="http://fuelcycle.org"
                                                   class="image"><img
-                                                  height="200"
-                                                  src="http://bids.berkeley.edu/sites/default/files/styles/450x254/public/projects/software-carpentry-450x254.png?itok=0XnUCwrr"
-                                                  alt="Software Carpentry"></a>
+                                                  height="150"
+                                                  src="http://fuelcycle.org/_images/logo2_bike.gif"
+                                                  alt="cyclus"></a>
                                                 </span>
-                                                <span class="fragment">
-                                                <a
-                                                  href="http://scipy.org"
+                                                <span class="fragment fade-out">
+                                                <a href="http://pyrk.github.io"
                                                   class="image"><img
-                                                  height="200"
-                                                  src="http://scipy.org/_static/images/scipycentral.png"
-                                                  alt="Scipy"></a>
+                                                  height="150"
+                                                  src="http://pyrk.github.io/_images/logo.png"
+                                                  alt="pyrk"></a>
                                                 </span>
-                                                <span class="fragment">
+                                                <span class="fragment fade-out">
+                                                <a href="http://pyne.io"
+                                                  class="image"><img
+                                                  height="150"
+                                                  src="http://bids.berkeley.edu/sites/default/files/styles/450x254/public/projects/pyne-450x254.png?itok=rdkh0T8e"
+                                                  alt="pyne"></a>
+                                                </span>
+                                                <span>
+                                                <a href="http://ncsa.illinois.edu"
+                                                  class="image"><img
+                                                  height="150"
+                                                  src="http://www.ncsa.illinois.edu/assets/img/logos_ncsa.png"
+                                                  alt="NCSA Logo"></a>
+                                                </span>
+                                                <span>
                                                 <a
                                                   href="http://thehackerwithin.github.io"
                                                   class="image"><img
-                                                  height="200"
+                                                  height="150"
                                                   src="http://thehackerwithin.github.io/images/thw_icon.png"
                                                   alt="THW"></a>
                                                 </span>
-                                                <span class="fragment">
+                                                <span>
+                                                <a
+                                                  href="http://software-carpentry.org"
+                                                  class="image"><img
+                                                  height="150"
+                                                  src="http://bids.berkeley.edu/sites/default/files/styles/450x254/public/projects/software-carpentry-450x254.png?itok=0XnUCwrr"
+                                                  alt="Software Carpentry"></a>
+                                                </span>
+                                                <span>
                                                 <a
                                                   href="http://physics.codes"
                                                   class="image"><img
-                                                  height="200"
+                                                  height="150"
                                                   src="http://physics.codes/images/ecip.jpg"
                                                   alt="book"></a>
+                                                </span>
+                                                <span>
+                                                <a href="http://arfc.npre.illinois.edu"
+                                                        class="image"><img
+                                                        height="150"
+                                                        src="./images/arfc-logo.png"
+                                                        alt="ARFC Logo"></a>
+                                                </span>
+                                                <span>
+                                                <a href="http://bids.berkeley.edu"
+                                                        class="image"><img
+                                                        height="150"
+                                                        src="http://bids.berkeley.edu/sites/all/themes/bids/logo.png"
+                                                        alt="BIDS Logo"></a>
                                                 </span>
                                         </section>
                                 </section>
@@ -92,35 +128,52 @@
                                                   class="image"><img 
                                                   src="http://rationalwiki.org/w/images/thumb/0/0e/Fission.svg/800px-Fission.svg.png"
                                                   alt="Fission."></a>
-                                                <p class="fragment">\[\sigma(E,\vec{r},\hat{\Omega},T,t,x,i)\]<p>
                                         </section>
 					<section>
                                                 <a href="http://rationalwiki.org/w/images/thumb/1/1f/Chainreaction.svg/715px-Chainreaction.svg.png"
                                                   class="image"><img 
                                                   src="http://rationalwiki.org/w/images/thumb/1/1f/Chainreaction.svg/715px-Chainreaction.svg.png"
                                                   alt="Chain reaction"></a>
+                                                <p class="fragment">\[\phi(E,\vec{r},\hat{\Omega},T)\]</p>
+                                                <p class="fragment">\[\phi(E, x, y, z, \theta, \omega, T)\]</p>
                                         </section>
-					<!--<section>
+					<section>
+                                                <a href="http://rationalwiki.org/w/images/thumb/0/0e/Fission.svg/800px-Fission.svg.png" 
+                                                  class="image"><img 
+                                                  src="http://rationalwiki.org/w/images/thumb/0/0e/Fission.svg/800px-Fission.svg.png"
+                                                  alt="Fission."></a>
+                                                <p class="fragment">\[\sigma(x, i, E, T)\]</p>
+                                        </section>
+					<section>
                                                 <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/6/68/ThermalFissionYield.svg/800px-ThermalFissionYield.svg.png"
                                                   class="image"><img 
                                                   src="
                                                   http://upload.wikimedia.org/wikipedia/commons/thumb/6/68/ThermalFissionYield.svg/800px-ThermalFissionYield.svg.png
                                                   "
                                                   alt="Fission yield"height=400></a>
+                                                <p class="fragment">\[\gamma(f, i)\]</p>
                                         </section>
-                                        -->
 					<section>
                                                 <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Isotopes_and_half-life.svg/853px-Isotopes_and_half-life.svg.png"
                                                   class="image"><img 
                                                   height="600"
                                                   src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Isotopes_and_half-life.svg/853px-Isotopes_and_half-life.svg.png"
                                                   alt="Nucleus Stability"></a>
+                                                <p class="fragment">\[i\]</p>
                                         </section>
 					<section>
                                                 <a href="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
                                                   class="image"><img 
                                                   src="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
                                                   alt="Resonances"></a>
+                                                <p class="fragment">\[E\]</p>
+                                        </section>
+					<section>
+                                                <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Liquid_drop_model.svg/2000px-Liquid_drop_model.svg.png"
+                                                  class="image"><img 
+                                                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Liquid_drop_model.svg/2000px-Liquid_drop_model.svg.png"
+                                                  alt="Nucleus Stability"></a>
+                                                <p class="fragment">nuclear structure</p>
                                         </section>
 					<section>
                                                 <h2>Evaluated Nuclear Data Sets</h2>
@@ -128,6 +181,23 @@
                                                   class="image"><img 
                                                   src="https://raw.githubusercontent.com/katyhuff/thunder/gh-pages/images/res.png" 
                                                   alt="Nuclear Resonance Theory and Evaluation"></a>
+                                                <p class="fragment">\[\sigma(x, i, E, T)=\] nuclear structure + experiments<p>
+                                        </section>
+					<section>
+                                                <h2>Experiments</h2>
+                                                <a href="http://exp-astro.physik.uni-frankfurt.de/exp_astro/experiments/thenewdance1b"
+                                                  class="image"><img 
+                                                  src="http://exp-astro.physik.uni-frankfurt.de/exp_astro/experiments/thenewdance1b"
+                                                  alt="Schematic of a DANCE-like detector"></a>
+                                        </section>
+					<section data-transition='none'>
+                                                <h2>Experiments</h2>
+                                                <a 
+                                                  height="500"
+                                                   href="http://wnr.lanl.gov/_assets/images/Neutron_scattering_machine_0.jpg"
+                                                  class="image"><img 
+                                                  src="http://wnr.lanl.gov/_assets/images/Neutron_scattering_machine_0.jpg"
+                                                  alt="The DANCE detector at Los Alamos"></a>
                                         </section>
 					<section>
                                                 <h2>Application Specific Data Processing</h2>
