missing section tag

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                                    src="http://www.popsci.com/sites/popsci.com/files/styles/large_1x_/public/demoncore.jpg?itok=YlYcA9-k&fc=50,50"
                                                    alt="Dangerous ladies, Jezebel and Godiva"></a>
                                                 </p>
+                                        </section>
                                         <section>
                                                 <h2>The Data Dilemma</h2>
                                                 <a 
