get rid of cname

--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                                 <h2>Links</h2>
                                                 <ul>
                                                         <ul>
-                                                                <li><a href="katyhuff.github.io"> katyhuff.github.io </a></li>
-                                                                <li><a href="fuelcycle.org"> fuelcycle.org</a></li>
-                                                                <li><a href="fhr.nuc.berkeley.edu">fhr.nuc.berkeley.edu</a></li>
+                                                                <li><a href="http://arfc.npre.illinois.edu">arfc.npre.illinois.edu</a></li>
+                                                                <li><a href="http://kdhuff.npre.illinois.edu"> kdhuff.npre.illinois.edu </a></li>
+                                                                <li><a href="http://fuelcycle.org"> fuelcycle.org</a></li>
                                                                 <li><a href="http://pyrk.github.io/">pyrk.github.io</a></li>
                                                         </ul>
                                         </section>
