--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                 </section>
                                 <section>
                                         <section>
-						<h2>How Do We Know It's Right?</h2>
+                                                <h2>How Do We Know It's Right?</h2>
                                                 <a 
                                                    href="http://www.popsci.com/sites/popsci.com/files/styles/large_1x_/public/demoncore.jpg?itok=YlYcA9-k&fc=50,50"
                                                    class="image"><img 
@@ -423,6 +423,10 @@ Reveal.initialize({
         // parallaxBackgroundSize: '2100px 900px',
 
         // Optional libraries used to extend on reveal.js
+        math: {
+                mathjax: 'https://cdn.mathjax.org/mathjax/latest/MathJax.js',
+                config: 'TeX-AMS_HTML-full'  // See http://docs.mathjax.org/en/latest/config-files.html
+            },
         dependencies: [
         { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
         { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
