fixes broken DANCE link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <meta name="description" content="
                 A description of the use and generation of data within nuclear 
                 engineering. This was presented as an invited guest lecture in 
-                INFO500 at UIUC in Urbana, IL on October 13, 2016.">
+                the PI4 bootcamp at UIUC in Urbana, IL on May 31, 2017.">
                 <meta name="author" content="Kathryn Huff">
 
                 <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -195,9 +195,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                                 <h2>Experiments</h2>
                                                 <a 
                                                    height="500"
-                                                   href="http://wnr.lanl.gov/_assets/images/Neutron_scattering_machine_0.jpg"
+                                                   href="http://lansce.lanl.gov/facilities/lujan/_assets/images/Neutron_scattering_machine_0.jpeg"
                                                    class="image"><img 
-                                                   src="http://wnr.lanl.gov/_assets/images/Neutron_scattering_machine_0.jpg"
+                                                   src="http://lansce.lanl.gov/facilities/lujan/_assets/images/Neutron_scattering_machine_0.jpeg"
                                                    alt="The DANCE detector at Los Alamos"></a>
                                         </section>
                                 </section>
