adds moltres and msbr examples

--- a/index.html
+++ b/index.html
@@ -274,6 +274,317 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                                 </ul>
                                         </section>
                                 </section>
+	     <section>
+<h3>Molten Salt Reactor Designs</h3>
+		     <span>
+			     <a
+  href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Molten_Salt_Reactor.svg/800px-Molten_Salt_Reactor.svg.png"
+  class="image"><img
+  height="600" 
+  src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Molten_Salt_Reactor.svg/800px-Molten_Salt_Reactor.svg.png"
+  alt="MSR"></a>
+		     </span>
+	     </section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/robertson.png"
+					  alt="MSBR"></a>
+						<p>(Robertson, 1979)</p>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/cell_msbr_ctrl.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/cell_msbr_zone_1.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/plan_msbr.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/plan_vs_robinson.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/plan_msbr_results.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/elev_msbr.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/elev_msbr_results.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/xs_msbr.png"
+					  alt="MSBR"></a>
+					</section>
+					<section>
+						<h3>MSBR Full Core Simulation</h3>
+						<p>Andrei Rykhlevskii</p>
+						<a href="https://github.com/arfc/MSR-design"
+						 class="image"><img
+					height=500
+				  src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/msbr/flux_msbr.png"
+					  alt="MSBR"></a>
+					</section>
+					</section>
+					<section>
+					<section>
+						<h2>Reactor Kinetics</h2>
+						<a href="http://rationalwiki.org/w/images/thumb/0/0e/Fission.svg/800px-Fission.svg.png"
+	 class="image"><img
+  src="http://rationalwiki.org/w/images/thumb/0/0e/Fission.svg/800px-Fission.svg.png"
+  alt="Fission."></a>
+						<p class="fragment">\[\sigma(E,\vec{r},\hat{\Omega},T,x,i)\]</p>
+					</section>
+					<!--<section>
+	     <a href="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
+	     class="image"><img
+	     src="http://wwwndc.jaea.go.jp/j40fig/jpeg/u235_f1.jpg"
+	     alt="Resonances"></a>
+	     </section>
+					-->
+					<section>
+						<a href="http://rationalwiki.org/w/images/thumb/1/1f/Chainreaction.svg/715px-Chainreaction.svg.png"
+	 class="image"><img
+  src="http://rationalwiki.org/w/images/thumb/1/1f/Chainreaction.svg/715px-Chainreaction.svg.png"
+  alt="Chain reaction"></a>
+						<p class="fragment">\[k=1\]</p>
+					</section>
+					<!--<section>
+	     <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/6/68/ThermalFissionYield.svg/800px-ThermalFissionYield.svg.png"
+	     class="image"><img
+	     height="400"
+	     src="http://upload.wikimedia.org/wikipedia/commons/thumb/6/68/ThermalFissionYield.svg/800px-ThermalFissionYield.svg.png"
+	     alt="Fission yield"></a>
+	     <p class="fragment">\[i\]</p>
+	     </section>-->
+	     <section>
+		     <h2>Reactivity</h2>
+		     \[
+		     \begin{align}
+		     k &= \mbox{"neutron multiplication factor"}\\
+		     &= \frac{\mbox{neutrons causing fission}}{\mbox{neutrons produced by fission}}\\
+		     \rho &= \frac{k-1}{k}\\
+		     \rho &= \mbox{reactivity}\\
+		     \end{align}
+		     \]
+	     </section>
+	     <section>
+		     <a href="github.com/pyrk/pyrk"
+	  class="image"><img
+   width="100%"
+   src="./images/feedback.png"
+   alt="Feedback"></a>
+	     </section>
+	     <section> <a href="http://rationalwiki.org/wiki/File:Fission.svg"
+		   class="image"><img
+     src="./images/delayed_neutron.png"
+     height="400"
+     alt="Delayed Neutrons"
+     ></a>
+		     <p class="fragment">\[\beta_i, \lambda_{d,i}\]</p>
+	     </section>
+<section>
+<h2>Point Reactor Kinetics</h2>
+<small>
+\[
+\begin{align}
+    p &= \mbox{ reactor power }\\
+    \rho(t,&T_{fuel},T_{cool},T_{mod}, T_{refl}) = \mbox{ reactivity}\\
+    \beta &= \mbox{ fraction of neutrons that are delayed}\\
+    \beta_j &= \mbox{ fraction of delayed neutrons from precursor group j}\\
+    \zeta_j &= \mbox{ concentration of precursors of group j}\\
+    \lambda_{d,j} &= \mbox{ decay constant of precursor group j}\\
+    \Lambda &= \mbox{ mean generation time }\\
+    \omega_k &= \mbox{ decay heat from FP group k}\\
+    \kappa_k &= \mbox{ heat per fission for decay FP group k}\\
+    \lambda_{FP,k} &= \mbox{ decay constant for decay FP group k}\\
+    T_i &= \mbox{ temperature of component i}
+\end{align}
+                                        \]
+</small>
+</section>
+<section>
+<small>
+\[
+   \frac{d}{dt}\left[
+    \begin{array}{c}
+      p\\
+      \zeta_1\\
+      .\\
+      \zeta_j\\
+      .\\
+      \zeta_J\\
+      \omega_1\\
+      .\\
+      \omega_k\\
+      .\\
+      \omega_K\\
+      T_{i}\\
+      .\\
+      T_{I}\\
+    \end{array}
+    \right]
+    =
+    \left[
+      \begin{array}{ c }
+        \frac{\rho(t,T_{i},\cdots)-\beta}{\Lambda}p +
+        \displaystyle\sum^{j=J}_{j=1}\lambda_{d,j}\zeta_j\\
+        \frac{\beta_1}{\Lambda} p - \lambda_{d,1}\zeta_1\\
+        .\\
+        \frac{\beta_j}{\Lambda}p-\lambda_{d,j}\zeta_j\\
+        .\\
+        \frac{\beta_J}{\Lambda}p-\lambda_{d,J}\zeta_J\\
+        \kappa_1p - \lambda_{FP,1}\omega_1\\
+        .\\
+        \kappa_kp - \lambda_{FP,k}\omega_k\\
+        .\\
+        \kappa_{k p} - \lambda_{FP,k}\omega_{k}\\
+        f_{i}(p, C_{p,i}, T_{i}, \cdots)\\
+        .\\
+        f_{I}(p, C_{p,I}, T_{I}, \cdots)\\
+      \end{array}
+      \right]
+\]
+</small>
+</section>
+
+	     <section>
+		     <span>
+			     <a
+	  href="http://mooseframework.org"
+   class="image"><img
+   height="600" 
+   src="http://mooseframework.org/static/media/wiki/images/229/9629aa4947c9233de95d8a214180bdeb/moose.png"
+   alt="MOOSE"></a>
+		     </span>
+	     </section>
+	     <section>
+		     <h2>Coupled Multi-Physics Analysis</h2>
+		     <br/>
+		     <p>Using the MOOSE framework
+		     and its <b>Jacobian-Free Newton Krylov</b> solver, severe accident <b>neutronics</b>
+		     and <b/>thermal hydraulics</b> can be simulated beautifully for simple
+		     geometries and well studied materials. (below, INL BISON work.)
+		     </p>
+		     <a href="http://www.iaea.org/OurWork/ST/NE/NEFW/Technical-Areas/NFC/documents/fuel-engineering/TM-Chengdu-2013/Presentations/Session_1/1.5_Overview_of_BISON_Multidimensional_Fuel_Performance_code_(R._Williamson).pdf"
+	  class="image"><img
+   height="362" width="564"
+		src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/ap1000_moose.png"
+  alt="from INL, Rich Williamson"></a>
+	     </section>
+	     <section>
+		     <h2>Moltres: Dr. Alexander Lindsay</h2>
+		     <span>
+			     <a
+  href="https://github.com/arfc/moltres"
+  class="image"><img
+  height="600" 
+  src=https://yt3.ggpht.com/-m228mYexdB0/AAAAAAAAAAI/AAAAAAAAAAA/BUb24swAfxw/s900-c-k-no-mo-rj-c0xffffff/photo.jpg
+  alt="Moltres"></a>
+		     </span>
+	     </section>
+	     <section>
+		     <h3>Moltres Current Capabilities</h3>
+		     <ul>
+			<li>Navier Stokes + Multi-Group Neutron Diffusion + Kinetics</li>
+			     <li>arbitrary number of neutron energy groups</li>
+			     <li>arbitrary number of delayed neutron precursor groups</li>
+			     <li>neutron power coupled to salt temperature and flow</li>
+			     <li>Precursor capability requires discontinuous galerkin upwind scheme.</li>
+			     <li>Few group constants can be generated with SCALE-NEWT or Serpent</li>
+		     </ul>
+	     </section>
+	     <section>
+		     <h3>MSR Neutronics and TH Coupling</h3>
+		     <span>
+			     <a href="https://github.com/arfc/moltres"
+	   class="image"><img
+    height="300" 
+    src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/moltres/nt_group_1.png"
+    alt="Moltres Base Case"></a>
+		     </span>
+		     <span>
+			     <a href="https://github.com/arfc/moltres"
+	   class="image"><img
+    height="300" 
+    src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/moltres/nt_group_2.png"
+    alt="Moltres Base Case"></a>
+		     </span>
+		     <span>
+			     <a href="https://github.com/arfc/moltres"
+	   class="image"><img
+    height="300" 
+    src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/moltres/temperature.png"
+    alt="Moltres Base Case"></a>
+		     </span>
+	     </section>
+	     <section>
+		     <h3>MSR Precursors</h3>
+		     <span>
+			     <a href="https://github.com/arfc/moltres"
+	   class="image"><img
+    height="400" 
+    src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/moltres/shortest_lived_precursor.png"
+    alt="Moltres Base Case"></a>
+		     </span>
+		     <span>
+			     <a href="https://github.com/arfc/moltres"
+	   class="image"><img
+    height="400" 
+    src="https://raw.githubusercontent.com/katyhuff/2017-04-20-davis/gh-pages/images/moltres/longest_lived_precursor.png"
+    alt="Moltres Base Case"></a>
+		     </span>
+	     </section>
                                 <section>
                                         <section>
                                                 <h2>How Do We Know It's Right?</h2>
