gets rid of pyrk, adds moltres.

--- a/index.html
+++ b/index.html
@@ -628,8 +628,7 @@ height=500
                                                         <ul>
                                                                 <li><a href="http://arfc.npre.illinois.edu">arfc.npre.illinois.edu</a></li>
                                                                 <li><a href="http://kdhuff.npre.illinois.edu"> kdhuff.npre.illinois.edu </a></li>
-                                                                <li><a href="http://fuelcycle.org"> fuelcycle.org</a></li>
-                                                                <li><a href="http://pyrk.github.io/">pyrk.github.io</a></li>
+                                                                <li><a href="http://arfc.github.io/moltres">arfc.github.io/moltres</a></li>
                                                         </ul>
                                         </section>
                                 </section>
