--- a/index.html
+++ b/index.html
@@ -51,7 +51,112 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                         <br/>
                                         <h3>Kathryn (Katy) Huff</h3>
                                 </section>
-                                <section>
+                                        <section>
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://scipy.org"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://scipy.org/_static/images/scipycentral.png"
+                                                  alt="Scipy"></a>
+                                                </span>
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://thehackerwithin.github.io"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://thehackerwithin.github.io/images/thw_icon.png"
+                                                  alt="THW"></a>
+                                                </span>
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://software-carpentry.org"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://bids.berkeley.edu/sites/default/files/styles/450x254/public/projects/software-carpentry-450x254.png?itok=0XnUCwrr"
+                                                  alt="Software Carpentry"></a>
+                                                </span>
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://datacarpentry.org"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="./images/data-carpentry.png"
+                                                  alt="Data Carpentry"></a>
+                                                </span>
+
+                                                <br/>
+
+                                                <span class="fragment">
+                                                <a href="http://bids.berkeley.edu"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://bids.berkeley.edu/sites/all/themes/bids/logo.png"
+                                                  alt="BIDS Logo"></a>
+                                                </span>
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://physics.codes"
+                                                  class="image"><img
+                                                  height="200"
+                                                  src="http://physics.codes/images/ecip.jpg"
+                                                  alt="book"></a>
+                                                </span>
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://http://www.ucpress.edu/book.php?isbn=9780520294752"
+                                                  class="image"><img
+                                                  height="200"
+                                                  src="./images/2016-prr-book.jpg"
+                                                  alt="book"></a>
+                                                </span>
+
+                                                <br/>
+
+                                                <span class="fragment">
+                                                <a 
+                                                href="http://ncsa.illinois.edu" 
+                                                class="image"><img 
+                                                height="100" 
+                                                src="http://www.ncsa.illinois.edu/assets/img/logos_ncsa.png" 
+                                                alt="NCSA Logo"></a> 
+                                                </span>
+                                                <span class="fragment">
+                                                <a 
+                                                href="http://arfc.npre.illinois.edu" 
+                                                class="image"><img 
+                                                height="150" 
+                                                src="./images/arfc-logo.png" 
+                                                alt="ARFC Logo"></a>
+                                                </span>
+
+                                                <br/>
+
+                                                <span class="fragment">
+                                                <a
+                                                  href="http://fuelcycle.org"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://fuelcycle.org/_images/logo2_bike.gif"
+                                                  alt="cyclus"></a>
+                                                <a href="http://pyrk.github.io"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://pyrk.github.io/_images/logo.png"
+                                                  alt="pyrk"></a>
+                                                <a href="http://pyne.io"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://bids.berkeley.edu/sites/default/files/styles/450x254/public/projects/pyne-450x254.png?itok=rdkh0T8e"
+                                                  alt="pyne"></a>
+                                                <a
+                                                  href="http://github.com/arfc/moltres"
+                                                  class="image"><img
+                                                  height="100"
+                                                  src="http://arfc.github.io/img/research/moltres.jpg"
+                                                  alt="moltres"></a>
+                                                </span>
+                                        </section>
                                         <section>
                                                 <span>
                                                         <span class="fragment fade-out">
