--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                                                    src="http://pyrk.github.io/_images/logo.png"
                                                                    alt="pyrk"></a>
                                                         </span>
-                                                        <span class="fragment fade-out">
+                                                        <span class="fragment">
                                                         <a
                                                           href="http://github.com/arfc/moltres"
                                                           class="image"><img
@@ -154,28 +154,28 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                                                           src="http://arfc.github.io/img/research/moltres.jpg"
                                                           alt="moltres"></a>
                                                         </span>
-                                                        <span class="fragment fade-out">
+                                                        <span class="fragment">
                                                                 <a href="http://pyne.io"
                                                                    class="image"><img
                                                                    height="100"
                                                                    src="http://bids.berkeley.edu/sites/default/files/styles/450x254/public/projects/pyne-450x254.png?itok=rdkh0T8e"
                                                                    alt="pyne"></a>
                                                         </span>
-                                                        <span>
+                                                        <span class="fragment">
                                                                 <a href="http://arfc.npre.illinois.edu"
                                                                    class="image"><img
                                                                    height="100"
                                                                    src="./images/arfc-logo.png"
                                                                    alt="ARFC Logo"></a>
                                                         </span>
-                                                        <span class="fragment fade-out">
+                                                        <span class="fragment">
                                                                 <a href="http://ncsa.illinois.edu"
                                                                    class="image"><img
                                                                    height="100"
                                                                    src="http://www.ncsa.illinois.edu/assets/img/logos_ncsa.png"
                                                                    alt="NCSA Logo"></a>
                                                         </span>
-                                                        <span>
+                                                        <span class="fragment">
                                                                 <a href="http://ans.org"
                                                                    class="image"><img
                                                                    height="100"
